--- a/package.json
+++ b/package.json
@@ -103,7 +103,8 @@
     "@types/terser-webpack-plugin": "^5.0.4",
     "@types/uuid": "^9.0.1",
     "@types/webpack-bundle-analyzer": "^4.6.0",
-    "@vitest/ui": "^3.2.4",
+    "@vitest/coverage-v8": "^4.0.16",
+    "@vitest/ui": "^4.0.16",
     "autoprefixer": "^10.4.14",
     "babel-loader": "^10.0.0",
     "browserslist-config-erb": "^0.0.3",
@@ -151,7 +152,7 @@
     "tsconfig-paths-webpack-plugin": "^4.0.1",
     "typescript": "^5.8.3",
     "url-loader": "^4.1.1",
-    "vitest": "^3.2.4",
+    "vitest": "^4.0.16",
     "webpack": "^5.85.0",
     "webpack-bundle-analyzer": "^4.9.0",
     "webpack-cli": "^5.1.1",
