--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
     "@types/node": "20.2.5",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
+    "@types/react-swipeable-views": "^0.13.6",
     "@types/react-syntax-highlighter": "^15.5.9",
     "@types/react-test-renderer": "^18.0.0",
     "@types/shell-quote": "^1.7.5",
@@ -227,6 +228,7 @@
     "react-photoswipe-gallery": "^3.1.1",
     "react-refresh": "^0.14.0",
     "react-router-dom": "^6.11.2",
+    "react-swipeable-views": "^0.14.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-test-renderer": "^18.2.0",
     "react-virtuoso": "^4.10.4",
@@ -257,6 +259,7 @@
     "typescript": "^5.8.3",
     "unist-util-visit": "^5.0.0",
     "url-loader": "^4.1.1",
+    "vaul": "^1.1.2",
     "vite": "^7.2.6",
     "vite-plugin-babel": "^1.3.2",
     "vite-plugin-svgr": "^4.5.0",
