--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "test:ui": "vitest --ui",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
+    "test:integration": "vitest run test/integration --testTimeout=300000",
     "test:file-conversation": "vitest run test/integration/file-conversation --testTimeout=120000",
+    "test:model-provider": "vitest run test/integration/model-provider --testTimeout=120000",
     "lint": "biome lint .",
     "lint:fix": "biome lint . --write",
     "check": "npx tsc --noEmit",
@@ -264,7 +266,7 @@
     "vite-plugin-babel": "^1.3.2",
     "vite-plugin-svgr": "^4.5.0",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.2.4",
+    "vitest": "^4.0.16",
     "web-vitals": "^2.1.4",
     "webpack": "^5.85.0",
     "webpack-bundle-analyzer": "^4.9.0",
