--- a/package.json
+++ b/package.json
@@ -296,6 +296,7 @@
     "electron-store": "^8.1.0",
     "electron-updater": "^6.3.9",
     "epub": "^1.3.0",
+    "es-toolkit": "^1.43.0",
     "fs-extra": "^11.1.1",
     "iconv-lite": "^0.6.3",
     "linkedom": "^0.18.5",
