--- a/package.json
+++ b/package.json
@@ -158,6 +158,7 @@
     "@vitejs/plugin-react": "^5.1.1",
     "@vitest/coverage-v8": "^4.0.16",
     "@vitest/ui": "^4.0.16",
+    "ai-retry": "^0.12.0",
     "autoprefixer": "^10.4.14",
     "autosize": "^6.0.1",
     "axios": "^1.3.4",
