chore: fix lint and type issues (#507)
* chore: fix lint and type issues

- Add type imports where needed
- Fix unused parameter warnings
- Clean up shell-env script
- Remove unused preload declarations

* fix: revert shell-env.cjs changes and exclude from lint

- Revert arrow function changes that broke arguments handling
- Fix biome.json to exclude .cjs extension (was .js)

--- a/biome.json
+++ b/biome.json
@@ -17,7 +17,7 @@
     "includes": [
       "src/**",
       "test/integration/**/*.ts",
-      "!src/main/mcp/shell-env.js",
+      "!src/main/mcp/shell-env.cjs",
       "!src/renderer/components/icons/**",
       "biome.json",
       "*.config.js",
@@ -44,7 +44,7 @@
     },
     "includes": [
       "src/**",
-      "!src/main/mcp/shell-env.js",
+      "!src/main/mcp/shell-env.cjs",
       "!src/renderer/components/icons/**",
       "biome.json",
       "*.config.js",
