feat: refactor image generation to standalone tool page (#504)
* feat: refactor image generation to standalone tool page

- Add new /image-creator route with dedicated UI
- Create ImageGeneration data model with Zod schema
- Implement imageGenerationStore with paginated history
- Add imageGenerationActions for single-task generation
- Support reference images and continuous modification
- Track parentId for iteration chains
- Migrate old picture sessions to new format (mark as hidden)
- Add i18n translations (EN/ZH-Hans)
- Update sidebar and keyboard shortcut navigation

* refactor: optimize image creator page with database storage and React Query

- Add native IndexedDB/SQLite storage for image generation records
- Use React Query for data fetching with infinite scroll pagination
- Simplify zustand store to only hold UI state (currentGeneratingId, currentRecordId)
- Improve image-creator page styling and fix scroll layout issues
- Update migration to use new database storage directly
- Remove localforage dependency for image generation, use native IndexedDB with createdAt index

* fix: history panel expand button not clickable when collapsed

* fix: improve image creator mobile UX and add retry functionality

- Fix ref image delete button being clipped by adding overflow-visible
- Add mobile history drawer accessible via History button
- Optimize mobile input layout with full-width textarea
- Fix history item selected state using ring border instead of background
- Fix image loading by adding base64 prefix for blob data
- Add retry button for failed image generations

* fix: address PR review comments for image creator

- Add FileReader.onerror handler for image upload error handling
- Remove unused Title import from @mantine/core
- Replace console.error with logger utility (getLogger)
- Extract blobToDataUrl helper function to reduce duplication
- Add loading skeleton for history panel initial load state
- Remove unused useAsReference function from imageGeneration

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "electron:publish-win": "npm install && npm run postinstall && npm run build && electron-builder build --publish always --win",
     "rebuild": "electron-rebuild --parallel --types prod,dev,optional --module-dir release/app",
     "dev": "npm start",
+    "dev:local": "cross-env USE_LOCAL_API=true npm start",
     "dev:web": "cross-env DEV_WEB_ONLY=true CHATBOX_BUILD_PLATFORM=web npm start",
     "dev:debug": "cross-env MAIN_ARGS=\"--inspect=5858\" npm start",
     "start": "electron-vite dev",
