fix: PDF parsing broken after pnpm migration (#551)
- Pin officeparser to 5.0.0 which has internal pdfjs build
- pnpm resolved to 5.2.2 which uses external pdfjs-dist requiring DOMMatrix
- Remove @napi-rs/canvas override (no longer needed)
- Move canvas-confetti to devDependencies
- Add explicit error for legacy Office formats (.doc/.xls/.ppt)
- Update file picker to show supported formats based on parser type

--- a/package.json
+++ b/package.json
@@ -136,6 +136,8 @@
     "@types/auto-launch": "^5.0.5",
     "@types/autosize": "^4.0.3",
     "@types/big.js": "^6.2.2",
+    "@types/canvas-confetti": "^1.9.0",
+    "canvas-confetti": "^1.9.4",
     "@types/d3": "^7.4.3",
     "@types/epub": "^0.0.11",
     "@types/gtag.js": "^0.0.13",
@@ -303,7 +305,7 @@
     "linkedom": "^0.18.5",
     "lodash": "^4.17.21",
     "ofetch": "^1.0.1",
-    "officeparser": "^5.0.0",
+    "officeparser": "5.0.0",
     "sanitize-filename": "^1.6.3",
     "uuid": "^9.0.0"
   },
@@ -335,8 +337,7 @@
       "@tanstack/router-generator": "1.120.15",
       "@tanstack/router-plugin": "1.120.15",
       "@mastra/libsql": "0.13.2",
-      "@mastra/rag": "1.0.8",
-      "@napi-rs/canvas": "-"
+      "@mastra/rag": "1.0.8"
     },
     "patchedDependencies": {
       "libsql@0.5.22": "patches/libsql@0.5.22.patch"
