fix: prevent win-arm64 startup crash on Windows ARM64 (#569)
* fix: apply libsql fallback patch during electron packaging

* fix: patch packaged libsql without changing pnpm patch config

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,7 +1,9 @@
 productName: Chatbox
 appId: xyz.chatboxapp.app
 asar: true
-asarUnpack: "**\\*.{node,dll}"
+asarUnpack:
+  - "**\\*.{node,dll}"
+  - "**/node_modules/libsql/**"
 files:
   - "dist"
   # - "!dist/**/*.map"
@@ -10,6 +12,7 @@ files:
   - "package.json"
 
 afterSign: .erb/scripts/notarize.js
+afterPack: .erb/scripts/patch-libsql.cjs
 
 # releaseInfo:
 #   releaseNotes: See the changelog for details
