chore: remove workflow files from tracking, update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -176,3 +176,8 @@ electron-builder.env
 **/routeTree.gen.ts
 
 .env.sentry-build-plugin
+
+# Cherry-pick workflow files (not tracked)
+AGENTS.md
+pick-list-*.md
+ELECTRON_VITE_MIGRATION.md
