--- a/.npmrc
+++ b/.npmrc
@@ -1,18 +1,10 @@
-# Handle peer dependency conflicts
-legacy-peer-deps=true
+# Electron compatibility - use flat node_modules
+node-linker=hoisted
 
-# Increase memory for npm operations
+# Auto-install peer dependencies
+auto-install-peers=true
+
+# Preserved from original npm config
 node-options=--max-old-space-size=4096
-
-# Disable npm update notifications
 update-notifier=false
-
-# Use exact versions when installing packages
-save-exact=false
-
-# Disable package-lock.json updates for CI
-# package-lock=false
-
-# Set registry (uncomment if using custom registry)
-# registry=https://registry.npmjs.org/
 engine-strict=true
